# cmakeTestSetup

./: CMakeLists.txt  README.md  boostTest.cpp  entitlement.cpp  kvStore.c  people.json  test.cpp
dependents/mongocxx/: CMakeLists.txt
dependents/mongocxx/lib/cmake/bsoncxx-3.8.0/: bsoncxx-config.cmake  bsoncxx_targets-relwithdebinfo.cmake  bsoncxx_targets.cmake
dependents/mongocxx/lib/cmake/libbsoncxx-static-3.8.0/: libbsoncxx-static-config.cmake
dependents/mongocxx/lib/cmake/libmongocxx-static-3.8.0/: libmongocxx-static-config.cmake
dependents/mongocxx/lib/cmake/mongocxx-3.8.0/: mongocxx-config-version.cmake  mongocxx_targets-relwithdebinfo.cmake  mongocxx_targets.cmake
dependents/mongocxx/lib/pkgconfig/: libbsoncxx-static.pc  libmongocxx-static.pc
headers/: MyServer.h  swap.h
src/: MyServer.cpp  swap.cpp
